=== HEAD

* Don't attempt to use class polymorphism in the class_table_inheritance plugin if no cti_key is defined (jeremyevans)

* Add a XmlSerializer plugin for serializing/deserializing model objects to/from XML (jeremyevans)

* Add a JsonSerializer plugin for serializing/deserializing model objects to/from JSON (jeremyevans)

* Handle unsigned integers in the schema dumper (jeremyevans)

=== 3.12.0 (2010-06-01)

* Add a :deferrable option to foreign_key for creating deferrable foreign keys (hydrow)

* Add a :join_table_block many_to_many association option used by the add/remove/remove_all methods (jeremyevans)

* Add an AssociationPks plugin that adds association_pks and association_pks= methods for *_to_many associations (jeremyevans)

* Add an UpdatePrimaryKey plugin that allows you to update the primary key of a model object (jeremyevans)

* Add a SkipCreateRefresh plugin that skips the refresh when saving new model objects (jeremyevans)

* Add a StringStripper plugin that strips strings before assigning them to model attributes (jeremyevans)

* Allow the :eager_loader association proc to accept a single hash instead of 3 arguments (jeremyevans)

* Add a Dataset#order_append alias for order_more, for consistency with order_prepend (jeremyevans)

* Add a Dataset#order_prepend method that adds to the end of an existing order (jeremyevans)

* Add a Sequel::NotImplemented exception class, use instead of NotImplementedError (jeremyevans)

* Correctly handle more than 2 hierarchy levels in the single table inheritance plugin (jeremyevans)

* Allow using a custom column value<->class mapping to the single_table_inheritance plugin (jeremyevans, tmm1)

* Handle SQL::Identifiers in the schema_dumper extension (jeremyevans) (#304)

* Make sure certain alter table operations clear the schema correctly on MySQL (jeremyevans) (#301)

* Fix leak of JDBC Statement objects when using transactions on JDBC on databases that support savepoints (jeremyevans)
