@@ -99,6 +99,11 @@ module Sequel
         conn = Mysql.init
         conn.options(Mysql::READ_DEFAULT_GROUP, opts[:config_default_group] || "client")
         conn.options(Mysql::OPT_LOCAL_INFILE, opts[:config_local_infile]) if opts.has_key?(:config_local_infile)
+        if encoding = opts[:encoding] || opts[:charset]
+          # Set encoding before connecting so that the mysql driver knows what
+          # encoding we want to use, but this can be overridden by READ_DEFAULT_GROUP.
+          conn.options(Mysql::SET_CHARSET_NAME, encoding)
+        end
         conn.real_connect(
           opts[:host] || 'localhost',
           opts[:user],
@@ -110,11 +115,11 @@ module Sequel
           Mysql::CLIENT_MULTI_STATEMENTS +
           (opts[:compress] == false ? 0 : Mysql::CLIENT_COMPRESS)
         )
-        if encoding = opts[:encoding] || opts[:charset]
-          # Setting encoding before the connect appears not to work
-          # with READ_DEFAULT_GROUP, so set it afterwards.
-          conn.options(Mysql::SET_CHARSET_NAME, encoding)
-        end
+        # Set encoding a slightly different way after connecting,
+        # in case the READ_DEFAULT_GROUP overrode the provided encoding.
+        # Doesn't work across implicit reconnects, but Sequel doesn't turn on
+        # that feature.
+        conn.query("set names #{literal(encoding.to_s)}") if encoding
 
         # increase timeout so mysql server doesn't disconnect us
         conn.query("set @@wait_timeout = #{opts[:timeout] || 2592000}")
